# aitai

./: .gitignore  Cargo.toml  LICENSE  README.md  notes_v1.md  stablelm-2-1-6b-fft.yml  test_prompt.txt
axolotl-configs/: llama-3-8b-lora.yml  llama-3-8b-qlora.yml  phi-2-lora.yml  stablelm-2-1-6b-fft.yml  stablelm-2-1-6b-lora.yml
dataset-outputter/: Cargo.toml
dataset-outputter/src/: main.rs
scripts/: 0-download.sh  0-take-sample.sh  1-comments-extract.sh  1-submissions-extract.sh  2-submissions-extract.sh  3-comments-group-by-submissions.sh  4-combine-submissions-and-comments.sh
src/: main.rs  stage1.rs  stage2.rs  stage3.rs
